--- a/my-profile.css
+++ b/my-profile.css
@@ -14,7 +14,13 @@ body {
     display: flex;
     justify-content: center;
   }
-  
+
+  .pic-container {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+
   .my-details {
     border: 2px solid #0066cc;
     border-radius: 8px;
